# socket

./: .gitmodules
chat/: client.rb  server.rb
cpp/: CMakeLists.txt  server  server.cpp
docker+node.js/: Dockerfile  chat.js  client.js  package.json
echo/: client.rb  server.rb
go/: tcp.go  udp.go
go-socket.io/: server.go
linux_tcp/: .gitignore  build.sh  epoll  epoll.cpp  ev++.cpp  libev.cpp
node.js/: client.js  server.js
performance/: conn.js  huge_conn.js  huge_send.js  send.js  settings.json  socket-io.go  socket-io.js
phoenix_chat/: client.js  conn.js  package.json
phoenix_chat/config/: config.exs  dev.exs
phoenix_chat/lib/phoenix_chat/: endpoint.ex  repo.ex
phoenix_chat/web/channels/: room_channel.ex  user_socket.ex
quic/: client.go  server.go
rudp/node/: client.js  server.js
rudp/ruby/: client.rb  loop.rb  rudp.rb  server.rb
udp/: client.rb  mtu_client.rb  server.rb
websocket/: client.rb  server.rb
